homestyle.css
html, body {
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  flex-direction: column;
  background-image: url("https://images.pexels.com/photos/1603901/pexels-photo-1603901.jpeg?cs=srgb&dl=pexels-rajesh-tp-749235-1603901.jpg&fm=jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position:center;
}



.main_content {
  flex: 1;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  background-color: #333333;
  display: flex;
  background-color: rgb(85, 107, 47);

}

ul li a {
  display: block;
  color: blanchedalmond;
  padding: 14px 16px;
  text-decoration: none;
}

ul li a:hover {
  background-color: #ffffff23;
}


#logo {
  margin-top: 250px;
  color: rgb(255,248,220);
  text-align: left;
  font-size: 10em;
}


.footer_items {
  display: flex;
  justify-content: flex-start;
  flex-wrap:wrap;
  gap: 20px;
  background-color: rgb(85, 107, 47);
  padding-left:15px;
  padding-bottom:15px;
  color:blanchedalmond;
}

#footer p {
  margin-bottom: 0px;
  line-height: 5px;
  font-family:'Georgia', serif;
  font-size:13px;

}
#footer h2{
  font-size:18px;
}

a{
  color:burlywood;
}
@media screen and (max-width: 480px) {
  ul {
    flex-direction: column;
    align-items:center;
  }

}

